1st imple of sample play

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
           <div class="operationContent"> 
             <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" id="btConnectCube1">Connect Cube 1</button>
-            <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" id="btConnectCube2">Connect Cube 2</button>
+            <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btConnectCube2">Connect Cube 2</button>
           </div>
 
           <div class="operationTitleText"> 
