Introduce tone.js/midi

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     
     <!-- Code prettify -->
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+
+    <!-- For parsing MIDI file -->
+    <script src="https://unpkg.com/@tonejs/midi"></script>
+
   </head>
   
   <body>    
