modify on midi play

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
           <div class="operationContent"> 
             <input type="file" accept="audio/mid" class="dropify" id="fileSelector" data-height="100" />  
             <div class="associatedButton">
-              <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySound">PLAY</button>
-              <button class="mui-btn mui-btn--small mui-btn--accent mui-btn--raised" disabled id="btStopSound">STOP</button>
+              <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlayMIDI">PLAY</button>
+              <button class="mui-btn mui-btn--small mui-btn--accent mui-btn--raised" disabled id="btStopMIDI">STOP</button>
             </div>
           </div>
         </div>
