Update on security

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <!-- dropify(overrides file input) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel='stylesheet' href='http://cdn.rawgit.com/JeremyFagis/dropify/master/dist/css/dropify.min.css'/>  
-    <script src='http://cdn.rawgit.com/JeremyFagis/dropify/master/dist/js/dropify.min.js'></script>
+    <link rel='stylesheet' href='https://cdn.rawgit.com/JeremyFagis/dropify/master/dist/css/dropify.min.css'/>  
+    <script src='https://cdn.rawgit.com/JeremyFagis/dropify/master/dist/js/dropify.min.js'></script>
     
     <!-- Code prettify -->
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
