1st commit to multiple cube sound
MIDI playing has some sync issue....

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
             <input type="file" accept="audio/mid" class="dropify" id="fileSelector" data-height="100" />  
             <div id="MIDITrackDropDown"> 
               Cube 1: <select id="MIDITrackCube1">
-                <option value="1">Track 1</option>
+                <option value="1">--------</option>
               </select>
               , Cube 2: <select id="MIDITrackCube2">
-                <option value="2">Track 2</option>
+                <option value="2">--------</option>
               </select>
             </div>
             <div class="associatedButton">
