Add copy code function.

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
           </div>
           <div class="operationContent"> 
             <!-- Copy code region -->
-            <pre id="output" class="prettyprint lang-js"></pre>
+            <pre id="outputCode" class="prettyprint lang-js"></pre>
             <div class="associatedButton">
-              <button class="mui-btn mui-btn--small" disabled id="copyCode">Copy code</button>
+              <button class="mui-btn mui-btn--small" id="copyCode">Copy code</button>
               <div class="mui--text-accent" id="copiedText" style='display:none;'>COPIED!</div>
             </div>
           </div>
