Support 3rd Cube

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <div class="operationContent"> 
             <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" id="btConnectCube1">Connect Cube 1</button>
             <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btConnectCube2">Connect Cube 2</button>
+            <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btConnectCube3">Connect Cube 3</button>
           </div>
 
           <div class="operationTitleText"> 
@@ -94,6 +95,9 @@
                 <option value="0">OFF</option>
               </select>
               , Cube 2: <select id="MIDITrackCube2">
+                <option value="0">OFF</option>
+              </select>
+              , Cube 3: <select id="MIDITrackCube3">
                 <option value="0">OFF</option>
               </select>
             </div>
