Complete Sample SE

--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
             Appendix B. Sample sounds.
           </div>
           <div class="operationContent">
-            <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySampleSE1">SE1</button>
-            <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySampleSE2">SE2</button>
-            <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySampleSE3">SE3</button>
-            <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySampleSE4">SE4</button>
+            <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySampleSE1">SE1(Droid)</button>
+            <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySampleSE2">SE2(Get)</button>
+            <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySampleSE3">SE3(Throw)</button>
+            <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySampleSE4">SE4(Energy)</button>
             <br>
             <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySample">PLAY MUSIC1</button>
             <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySample2">PLAY MUSIC2</button>
