--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
             <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySampleSE3">SE3(Throw)</button>
             <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySampleSE4">SE4(Energy)</button>
             <br>
-            <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySample">PLAY MUSIC1</button>
-            <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySample2">PLAY MUSIC2</button>
-            <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySample3">PLAY MUSIC3</button>
+            <button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySample">MUSIC1(UP/DOWN)</button>
+            <!-- button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySample2">MUSIC2</button-->
+            <!-- button class="mui-btn mui-btn--small mui-btn--primary mui-btn--raised" disabled id="btPlaySample3">MUSIC3</button-->
             <button class="mui-btn mui-btn--small mui-btn--accent mui-btn--raised" disabled id="btStopSample">STOP</button>
  
             <!-- Link to readme -->
