Support showing code in case sample melody

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <!-- Description -->
     <div id="descriptionText" class="descriptionText"> 
-      MIDI音源などを使ってtoio™Core CubeのSound機能をチェックできるシンプルツール<br>
-      A simple tool enables us to check Sound function of toio™Core Cube by using MIDI audio source and so on.
+      MIDI音源などを使ってtoio™Core CubeのSound機能をチェックできるツール<br>
+      A tool enables us to check Sound function of toio™Core Cube by using MIDI audio source and so on.
     </div>
 
     <!-- Operation -->
