--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Description -->
     <div id="descriptionText" class="descriptionText"> 
       MIDI音源などを使ってtoio™Core CubeのSound機能をチェックできるツール<br>
-      A tool enables us to check Sound function of toio™Core Cube by using MIDI audio source and so on.
+      A tool enables us to check sound function of toio™Core Cube by using MIDI audio source and so on.
     </div>
 
     <!-- Operation -->
